# python-fastmcp-polars

./: README.md  analyze_polars_data.py  pyproject.toml  run.sh  run_actuarial_example.py  uv.lock.info  view_actuarial_data.py
examples/: convert_actuarial_data.py  create_actuarial_data.py  demo.py
excel_polars_mcp/: __init__.py  server.py
output/: active_policies.parquet  claims.csv  claims.json  claims.parquet  claims_schema.json  conversion_summary.md  high_value_claims.parquet  life_table.csv  life_table.json  life_table.parquet  life_table_schema.json  loss_ratios_summary.csv  policies.csv  policies.json  policies.parquet  policies_schema.json  reserves.csv  reserves.json  reserves.parquet  reserves_schema.json
sample_data/: actuarial_data.xlsx
tests/: __init__.py  test_server.py
