[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-polars-mcp"
version = "0.1.0"
description = "MCP server for converting Excel files to Polars DataFrames"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
    "polars>=0.20.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
excel-polars-mcp = "excel_polars_mcp.server:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true